[package]
name = "wgman-cli"
version = "0.6.0"
authors = ["ashley"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
wgman-core = { path = "../wgman-core" }
# wgman-core = "0.6"
structopt = "0.3"
prettytable-rs = "^0.8"
futures = "0.3"
serde = "1"
serde_json = "1"
ipnetwork = "0.17"
